Succesfully injects modern javascript on helpcenter page templates. Created folder structure to support this new functionality.

--- a/src/templates/category_page.hbs
+++ b/src/templates/category_page.hbs
@@ -1,6 +1,4 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/category_page.js">
-</head>
+
 <div class="container-divider"></div>
 <div class="container">
 	<include src="subnav-partial.hbs"></include>
@@ -63,3 +61,4 @@
 	</div>
 
 </div>
+<script src="{{asset 'category_page.js'}}"></script>
