--- a/src/templates/community_topic_list_page.hbs
+++ b/src/templates/community_topic_list_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/community_topic_list_page.js">
-</head>
 <section class="section hero community-hero">
 	<div class="hero__inner">
 		<h1 class="hero__text">Search community</h1>
@@ -85,3 +82,5 @@
 		{{link 'new_post' role='button' class='button-large'}}
 	</section>
 </div>
+
+<script src="{{asset 'community_topic_list_page.js'}}"></script>
