--- a/src/templates/community_topic_page.hbs
+++ b/src/templates/community_topic_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/community_topic_page.js">
-</head>
 <div class="container-divider"></div>
 <div class="container">
 	<nav class="sub-nav">
@@ -109,3 +106,5 @@
 	<h4>{{t 'suggest_new_post'}}</h4>
 	{{link 'new_post' role='button' class='button-large'}}
 </section>
+
+<script src="{{asset 'community_topic_page.js'}}"></script>
