--- a/src/templates/contributions_page.hbs
+++ b/src/templates/contributions_page.hbs
@@ -1,7 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/contributions_page.js">
-</head>
-
 <nav class="my-activities-nav collapsible-nav">
 	<ul class="collapsible-nav-list container">
 		{{#if help_center.request_management_enabled}}
@@ -67,3 +63,5 @@
 	{{pagination}}
 
 </div>
+
+<script src="{{asset 'contributions_page.js'}}"></script>
