--- a/src/templates/error_page.hbs
+++ b/src/templates/error_page.hbs
@@ -1,7 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/error_page.js">
-</head>
-
 <div class="container-divider"></div>
 <div class="error-page">
 	<h1>{{t 'oops'}}</h1>
@@ -23,3 +19,5 @@
 	{{t 'back_to_homepage'}}
 	{{/link}}
 </div>
+
+<script src="{{asset 'error_page.js'}}"></script>
