--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/header.js">
-</head>
 <header class="header">
 	<div class="header__logo">
 		{{#link 'help_center'}}
@@ -37,3 +34,5 @@
 		});
 	</script>
 </header>
+
+<script src="{{asset 'header.js'}}"></script>
