--- a/src/templates/requests_page.hbs
+++ b/src/templates/requests_page.hbs
@@ -1,6 +1,4 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/requests_page.js">
-</head>
+
 <nav class="my-activities-nav collapsible-nav">
 	<ul class="collapsible-nav-list container">
 		<li aria-selected=true>{{t 'requests'}}</li>
@@ -123,3 +121,5 @@
 
 	{{pagination}}
 </div>
+
+<script src="{{asset 'requests_page.js'}}"></script>
