--- a/src/templates/subscriptions_page.hbs
+++ b/src/templates/subscriptions_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/subscriptions_page.js">
-</head>
 <nav class="my-activities-nav collapsible-nav">
 	<ul class="collapsible-nav-list container">
 		{{#if help_center.request_management_enabled}}
@@ -67,3 +64,5 @@
 		{{/if}}
 	</div>
 </div>
+
+<script src="{{asset 'subscriptions_page.js'}}"></script>
