--- a/src/templates/article_page.hbs
+++ b/src/templates/article_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/article_page.js">
-</head>
 <div class="container-divider"></div>
 <div class="container">
 
@@ -220,3 +217,4 @@
 
 	</div>
 </div>
+<script src="{{asset 'article_page.js'}}"></script>
