--- a/src/templates/community_post_page.hbs
+++ b/src/templates/community_post_page.hbs
@@ -1,7 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/community_post_page.js">
-</head>
-
 <div class="container-divider"></div>
 <div class="container">
 	<nav class="sub-nav">
@@ -217,3 +213,5 @@
 		</section>
 	</div>
 </div>
+
+<script src="{{asset 'community_post_page.js'}}"></script>
