--- a/src/templates/footer.hbs
+++ b/src/templates/footer.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/footer.js">
-</head>
 <footer class="footer">
 	<div class="footer-inner">
 		{{#link 'help_center'}}{{help_center.name}}{{/link}}
@@ -23,3 +20,5 @@
 		</div>
 	</div>
 </footer>
+
+<script src="{{asset 'footer.js'}}"></script>
