--- a/src/templates/home_page.hbs
+++ b/src/templates/home_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/home_page.js">
-</head>
 <include src="hero-partial.hbs"></include>
 
 <div class="container">
@@ -39,3 +36,5 @@
 		{{pagination}}
 	</section>
 </div>
+
+<script src="{{asset 'home_page.js'}}"></script>
