--- a/src/templates/new_community_post_page.hbs
+++ b/src/templates/new_community_post_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/new_community_post_page.js">
-</head>
 <div class="container-divider"></div>
 <div class="container">
 	<nav class="sub-nav">
@@ -50,3 +47,5 @@
 		{{/form}}
 	</div>
 </div>
+
+<script src="{{asset 'new_community_post_page.js'}}"></script>
