--- a/src/templates/new_request_page.hbs
+++ b/src/templates/new_request_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/new_request_page.js">
-</head>
 <div class="container-divider"></div>
 <div class="container">
 	<nav class="sub-nav">
@@ -23,3 +20,5 @@
 
 	{{chat}}
 </div>
+
+<script src="{{asset 'new_request_page.js'}}"></script>
