--- a/src/templates/request_page.hbs
+++ b/src/templates/request_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/request_page.js">
-</head>
 <nav class="my-activities-nav collapsible-nav">
 	<ul class="collapsible-nav-list container">
 		<li aria-selected=true>{{t 'requests'}}</li>
@@ -228,3 +225,5 @@
 	</div>
 	{{chat_about_my_ticket}}
 </div>
+
+<script src="{{asset 'request_page.js'}}"></script>
