--- a/src/templates/search_results.hbs
+++ b/src/templates/search_results.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/search_results.js">
-</head>
 <div class="container-divider"></div>
 <div class="container">
 	<include src="subnav-partial.hbs"></include>
@@ -104,3 +101,5 @@
 
 	{{pagination}}
 </div>
+
+<script src="{{asset 'search_results.js'}}"></script>
