--- a/src/templates/section_page.hbs
+++ b/src/templates/section_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/section_page.js">
-</head>
 <div class="container-divider"></div>
 <div class="container">
 	<include src="subnav-partial.hbs"></include>
@@ -45,3 +42,5 @@
 		</section>
 	</div>
 </div>
+
+<script src="{{asset 'section_page.js'}}"></script>
