--- a/src/templates/user_profile_page.hbs
+++ b/src/templates/user_profile_page.hbs
@@ -1,6 +1,3 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="../template-js/user_profile_page.js">
-</head>
 <header class="profile-header">
 	<div class="container">
 		<div class="profile-info">
@@ -299,3 +296,5 @@
 	</section>
 </div>
 {{/unless}}
+
+<script src="{{asset 'user_profile_page.js'}}"></script>
