--- a/src/templates/new_request_page.hbs
+++ b/src/templates/new_request_page.hbs
@@ -1,24 +1,24 @@
 <div class="container-divider"></div>
 <div class="container">
-	<nav class="sub-nav">
-		{{breadcrumbs}}
-		{{search submit=false}}
-	</nav>
+  <nav class="sub-nav">
+    {{breadcrumbs}}
+    {{search submit=false}}
+  </nav>
 
-	<h1>
-		{{t 'submit_a_request'}}
-		{{#if follow_up}}
-		<span class="follow-up-hint">
-			{{follow_up}}
-		</span>
-		{{/if}}
-	</h1>
+  <h1>
+    {{t 'submit_a_request'}}
+    {{#if follow_up}}
+    <span class="follow-up-hint">
+      {{follow_up}}
+    </span>
+    {{/if}}
+  </h1>
 
-	<div class="form">
-		{{request_form}}
-	</div>
+  <div class="form">
+    {{request_form}}
+  </div>
 
-	{{chat}}
+  {{!-- {{chat}} --}}
 </div>
 
 <script src="{{asset 'new_request_page.js'}}"></script>
