--- a/src/templates/search_results.hbs
+++ b/src/templates/search_results.hbs
@@ -1,18 +1,18 @@
 <div class="container-divider"></div>
 <div class="container">
-	<include src="subnav-partial.hbs"></include>
+  <include src="subnav-partial.hbs"></include>
 
-	<header class="page-header">
-		<h1>{{t 'search_results'}}</h1>
-		<p class="page-header-description">{{t 'results' query=query count=results_count}}</p>
-	</header>
+  <header class="page-header">
+    <h1>{{t 'search_results'}}</h1>
+    <p class="page-header-description">{{t 'results' query=query count=results_count}}</p>
+  </header>
 
-	<div class="search-results">
-		<section class="search-results-column">
-			<h3 class="search-results-subheading">
-				{{t 'knowledge_base'}}
-			</h3>
-			{{#if article_results}}
+  <div class="search-results">
+    <section class="search-results-column">
+      <h3 class="search-results-subheading">
+        {{t 'knowledge_base'}}
+      </h3>
+      {{!-- {{#if article_results}}
 			<ul class="search-results-list">
 				{{#each article_results}}
 				<li class="search-result">
@@ -49,15 +49,15 @@
 				{{t 'browse_knowledge_base'}}
 				{{/link}}
 			</p>
-			{{/if}}
-		</section>
+			{{/if}} --}}
+    </section>
 
-		{{#if help_center.community_enabled}}
-		<section class="search-results-column">
-			<h3 class="search-results-subheading">
-				{{t 'community'}}
-			</h3>
-			{{#if post_results}}
+    {{#if help_center.community_enabled}}
+    <section class="search-results-column">
+      <h3 class="search-results-subheading">
+        {{t 'community'}}
+      </h3>
+      {{!-- {{#if post_results}}
 			<ul class="search-results-list">
 				{{#each post_results}}
 				<li class="search-result">
@@ -93,13 +93,13 @@
 				{{t 'browse_community'}}
 				{{/link}}
 			</p>
-			{{/if}}
-		</section>
-		{{/if}}
+			{{/if}} --}}
+    </section>
+    {{/if}}
 
-	</div>
+  </div>
 
-	{{pagination}}
+  {{pagination}}
 </div>
 
 <script src="{{asset 'search_results.js'}}"></script>
