--- a/src/sass/cloudhuset/_article.scss
+++ b/src/sass/cloudhuset/_article.scss
@@ -259,6 +259,12 @@
     margin-bottom: 10px;
     padding: 10px;
 
+    
+    &[aria-selected=true] {
+      border: 1px solid $brand_color;
+      color: $brand_color;
+    }
+    
     &.current-article,
     &:hover {
       background-color: $brand_color;
