Convert user_profile_page to v2

--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -16,7 +16,7 @@
       </li>
     </ul>
     <div class="header__user-info">
-      {{!-- {{user_info}} --}}
+      {{user_info}}
     </div>
     <div class="header__nav-toggle">
       <div id="toggle">
