Refactor gulpfile and fix some broken helpers

--- a/src/templates/user_profile_page.hbs
+++ b/src/templates/user_profile_page.hbs
@@ -185,7 +185,7 @@
           {{#if contributions}}
 
             <header class="profile-section-header">
-              <h2 class="profile-section-title">{{t filter_by}}</h2>
+              <h2 class="profile-section-title">{{t current_filter.identifier}}</h2>
               {{#if sorters}}
                 <span class="profile-section-description">{{sorter_description}}</span>
                 <span class="profile-section-sorter dropdown">
