--- a/src/templates/document_head.hbs
+++ b/src/templates/document_head.hbs
@@ -1,6 +1,4 @@
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script>
-    console.log('{{% category_ticket_field %}}')
-</script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
