Add css and js for dropdowns. Fix hero image. Fix follow button on activities page

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,4 @@
+@import "cloudhuset/normalize";
 @import "cloudhuset/variables";
 @import "cloudhuset/mixins";
 @import "cloudhuset/base";
@@ -36,3 +37,4 @@
 @import "cloudhuset/icons";
 @import "cloudhuset/user-profiles";
 @import "cloudhuset/search_results";
+@import "cloudhuset/dropdowns";
