dropdown styling, vote styling

--- a/src/sass/cloudhuset/_vote.scss
+++ b/src/sass/cloudhuset/_vote.scss
@@ -1,12 +1,10 @@
 /***** Vote *****/
 /* Used in article comments, post comments and post */
 .vote {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  width: 35px;
   a {
-    outline: none;
-
     &:active,
     &:hover,
     &:focus {
@@ -26,30 +24,29 @@
   }
 }
 
-.vote-up:hover::before,
-.vote-down:hover::before {
-  color: $brand_color;
+.vote-up svg {
+  transform: scale(1, -1);
 }
 
-.vote-up::before,
-.vote-down::before {
-  @extend .icon;
+.vote-up, .vote-down {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: none;
   color: $secondary-text-color;
-  font-size: 24px;
+  cursor: pointer;
+  min-height: 35px;
+  min-width: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.vote-up::before {
-  content: "\2B06";
-}
-
-.vote-down::before {
-  content: "\2B07";
-}
-
-.vote-voted::before {
+.vote-voted {
   color: $brand_color;
 }
 
-.vote-voted:hover::before {
+.vote-voted:hover {
   color: $hover-button-color;
 }
