--- a/src/sass/cloudhuset/_community.scss
+++ b/src/sass/cloudhuset/_community.scss
@@ -155,3 +155,15 @@
     }
   }
 }
+
+.post-actions-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.comment-actions-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
