--- a/src/sass/cloudhuset/_dropdowns.scss
+++ b/src/sass/cloudhuset/_dropdowns.scss
@@ -11,6 +11,7 @@
   padding: 0;
   text-align: initial;
   vertical-align: middle;
+  outline: 0;
 
   &:hover {
     text-decoration: none;
@@ -37,6 +38,7 @@
   position: absolute;
   text-align: left;
   z-index: 1000;
+  margin-top: 5px;
 
   [dir="rtl"] & {
     text-align: right;
@@ -113,7 +115,7 @@
 
 .dropdown-menu-top {
   bottom: 100%;
-  margin-bottom: 1px;
+  margin-bottom: 5px;
 }
 
 [dir="rtl"] {
@@ -133,4 +135,5 @@
 
 .dropdown-chevron-icon {
   vertical-align: middle;
+  margin-left: 3px;
 }
